--- a/ecommerce-ui/index.html
+++ b/ecommerce-ui/index.html
@@ -35,7 +35,7 @@
     
     <div class="cta-buttons">
       <a 
-        href="https://excalidraw.com/?addLibrary=https%3A%2F%2Fraw.githubusercontent.com%2Fexcalidraw%2Fexcalidraw-libraries%2Fvaibhav-purohit-ecommerce-ui-set-1762547257719%2Flibraries%2Fvaibhav-purohit%2Fecommerce-ui-set.excalidrawlib%3Fraw%3Dtrue" 
+        href="https://github.com/Vaibhav0718/Ecommerce-Prefab" 
         class="btn-primary"
         target="_blank"
       >
@@ -91,7 +91,7 @@
     <h2>🚀 Build Faster with Prefabs</h2>
     <p>Enhance your Athena Whiteboards with functional UI mockups that bring ideas to life.</p>
     <a 
-      href="https://excalidraw.com/?addLibrary=https%3A%2F%2Fraw.githubusercontent.com%2Fexcalidraw%2Fexcalidraw-libraries%2Fvaibhav-purohit-ecommerce-ui-set-1762547257719%2Flibraries%2Fvaibhav-purohit%2Fecommerce-ui-set.excalidrawlib%3Fraw%3Dtrue" 
+      href="https://github.com/Vaibhav0718/Ecommerce-Prefab" 
       class="btn-primary"
       target="_blank"
     >
