--- a/movie-review-ui/index.html
+++ b/movie-review-ui/index.html
@@ -26,7 +26,7 @@
 
     <div class="hero-buttons">
       <a 
-        href="https://excalidraw.com/?addLibrary=https%3A%2F%2Fraw.githubusercontent.com%2Fexcalidraw%2Fexcalidraw-libraries%2Fvaibhav0718-athena-board-movie-review-ui-kit-1762543510206%2Flibraries%2Fvaibhav0718%2Fathena-board-movie-review-ui-kit.excalidrawlib%3Fraw%3Dtrue"
+        href="https://github.com/Vaibhav0718/Movie-Review-UI-Kit"
         class="btn-primary"
         target="_blank"
       >
@@ -88,7 +88,7 @@
       Enhance your Athena Whiteboards with functional UI mockups that bring your creative projects to life.
     </p>
     <a 
-      href="https://excalidraw.com/?addLibrary=https%3A%2F%2Fraw.githubusercontent.com%2Fexcalidraw%2Fexcalidraw-libraries%2Fvaibhav0718-athena-board-movie-review-ui-kit-1762543510206%2Flibraries%2Fvaibhav0718%2Fathena-board-movie-review-ui-kit.excalidrawlib%3Fraw%3Dtrue"
+      href="https://github.com/Vaibhav0718/Movie-Review-UI-Kit"
       class="btn-primary"
       target="_blank"
     >
