Update links for Excalidraw library and GitHub repo

--- a/ecommerce-ui/index.html
+++ b/ecommerce-ui/index.html
@@ -35,7 +35,7 @@
     
     <div class="cta-buttons">
       <a 
-        href="https://github.com/DevFortress-Inc/excalidraw-libraries" 
+        href="https://excalidraw.com/?addLibrary=https%3A%2F%2Fraw.githubusercontent.com%2Fexcalidraw%2Fexcalidraw-libraries%2Fvaibhav-purohit-ecommerce-ui-set-1762547257719%2Flibraries%2Fvaibhav-purohit%2Fecommerce-ui-set.excalidrawlib%3Fraw%3Dtrue" 
         class="btn-primary"
         target="_blank"
       >
@@ -43,7 +43,7 @@
       </a>
 
       <a 
-        href="https://github.com/Vaibhav0718/Ecommerce-Prefab" 
+        href="https://github.com/DevFortress-Inc/excalidraw-libraries" 
         class="btn-outline" 
         target="_blank"
       >
